// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-truncate-beta #render should render component as expected (1) 1`] = `
<gux-truncate-beta>
  <!---->
  <div>
    <span class="gux-truncate-slot-container">
      Some text to truncate
    </span>
  </div>
</gux-truncate-beta>
`;

exports[`gux-truncate-beta #render should render component as expected (2) 1`] = `
<gux-truncate-beta>
  <!---->
  <div>
    <span class="gux-truncate-slot-container">
      <span>
        Some text to truncate in a span
      </span>
    </span>
  </div>
</gux-truncate-beta>
`;

exports[`gux-truncate-beta #render should render component as expected (3) 1`] = `
<gux-truncate-beta>
  <!---->
  <div>
    <span class="gux-truncate-slot-container">
      <div>
        Div
        <span>
          with a span
        </span>
        inside
      </div>
    </span>
  </div>
</gux-truncate-beta>
`;

exports[`gux-truncate-beta #render should render component as expected (4) 1`] = `
<gux-truncate-beta>
  <!---->
  <div>
    <span class="gux-truncate-slot-container">
      This is a long text that should be truncated after three lines of wrapped text
    </span>
  </div>
</gux-truncate-beta>
`;
